

********************************************************************
						V1.2.4
********************************************************************


#### SIGNUP SELECT TARIFFGROUP
********************************************************************
"
; ID Tariffgroup to use, check the ID in the tariffgroup list - WebUI
tariff = 1
"
-> need to be changed to ->

; ID CallPlan to sign the customers
; or define a list of ID to let himselect select the callplan
; check the ID in the callplan list - WebUI
callplan = 1, 2, 3
"

SO "IN CASE OF MULTIPLE CALLPLAN", a new Dropdown menu will appear on the signup form.
with the list of Callplan associate here to the list of ID 
(name of the callplab will appear, not the number 1, 2, 3)

Security, ensure at the sign-up time that the value send by the form is include in
it to avoid the possibility from the customer to signup under an other tariffgroup



#### MoneyBooker bug
********************************************************************
http://myaccount.call-labs.com/checkout_process.php?sess_id=58u4ckvmu0e0eedn9k872v1od4
Fatal error: Call to undefined method moneybookers::get_CurrentCurrency() in /var/www/html/svn/trunk/A2BCustomer_UI/lib/epayment/classes/payment.php on line 168


#### BUG
********************************************************************
You have 1 dependent records.
You are going as well to remove all the SIP/IAX accounts attached to this card! Please comfirm that you really want to remove that SIP/IAX Accounts ?


#### check files 
********************************************************************
A2BCustomer_UI/lib/epayment/includes/methods/*

define action url from conf file
A2BCustomer_UI/lib/epayment/methods/moneybookers.php


#### SHIFT LEFT : DEFINES.PHP
********************************************************************
SHIFT LEFT : DEFINES.PHP


#### INVOICES 
********************************************************************
View Invoices 
	# show cardnumber