@@ -4,6 +4,10 @@
 						V1.2.4
 ********************************************************************
 
+#### WEB-CALLBACK
+********************************************************************
+if the 2 leg is not connected, we need to bill the 1st 
+
 
 #### SIGNUP SELECT TARIFFGROUP
 ********************************************************************
